[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kubernetes-cost-optimizer"
version = "1.0.0"
description = "Kubernetes cost analytics engine reading telemetry to suggest pod autoscaling and sizing allocations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
